# llm-workshop

./: .gitignore  README.md
audio-summary/: pyproject.toml
audio-summary/src/audio_summary/: main.py
gemini/text-request/: Cargo.toml  README.md
gemini/text-request/src/: jemini.rs  main.rs
langchain/langchat/: pyproject.toml
langchain/langchat/src/langchat/: main.py
langwatch/orderly-copilot/: pyproject.toml
langwatch/orderly-copilot/src/orderly_copilot/: main.py
llm-chat/: pyproject.toml
llm-chat/src/llm_chat/: cli.py
neural-network/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
neural-network/src/: data.rs  main.rs
openai-chat/: .env.example  pyproject.toml
openai-chat/src/openai_chat/: cli.py  hello.py
promptflow/prompt-chain/: pyproject.toml
promptflow/prompt-chain/src/prompt_chain/: main.py
prompts/: reduce_verbosity.md
