[tool.poetry]
name = "audio-summary"
version = "0.1.0"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "audio_summary", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
assemblyai = "^0.21.0"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
