[package]
name = "jemini-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
google-generative-ai-rs = "0.2.3"
jemini = "0.1.1"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
