[tool.poetry]
name = "orderly-copilot"
version = "0.1.0"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "orderly_copilot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langwatch = "^0.0.17"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.3"
langchain-cohere = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
