[tool.poetry]
name = "prompt-chain"
version = "0.1.0"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_chain", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
promptflow = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
